# JsonSerializer

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
CJsonSerializer/: CDeserializerBase.cpp  CDeserializerBase.h  CIDeserializer.h  CISerializer.h  CJsonSerializer.h  CMakeLists.txt  CSerializerBase.cpp  CSerializerBase.h  ObjectBase.h  ObjectFactory.h
JsonExample/: CMakeLists.txt  City.h  Main.cpp  Park.h  QPark.h
QJsonSerializer/: CMakeLists.txt  CustomType.h  QDeserializerBase.cpp  QDeserializerBase.h  QIDeserializer.h  QISerializer.h  QJsonSerializer.h  QSerializerBase.cpp  QSerializerBase.h
